--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,13 +4,18 @@
     android:layout_height="match_parent"
     tools:context="com.optimalbd.qualitynews.MainActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <ListView
-        android:id="@+id/newsListView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/activity_main_swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:layout_above="@+id/loadMoreLayout" />
+        android:layout_above="@+id/loadMoreLayout"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@+id/newsListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+           />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/loading_progressBar"
