--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -21,26 +21,28 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="4dp"
-                android:layout_marginStart="4dp">
+                android:layout_marginStart="4dp"
+                android:layout_weight=".75">
 
                 <ImageView
                     android:id="@+id/thumbnailImageView"
                     android:layout_width="match_parent"
-                    android:src="@drawable/news"
-                    android:scaleType="center"
                     android:layout_height="match_parent"
-                  />
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/news" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_weight="1.50"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -67,15 +69,16 @@
                         android:textColor="@android:color/black"
                         android:textSize="15sp"
                         android:visibility="gone" />
+
                     <TextView
                         android:id="@+id/sourceTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="source"
                         android:layout_marginTop="10dp"
+                        android:text="source"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold|italic"
                         android:textSize="14sp"
+                        android:textStyle="bold|italic"
                         android:visibility="visible" />
 
                 </LinearLayout>
