--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -79,7 +79,7 @@
                         android:layout_marginLeft="7sp"
                         android:text="time"
                         android:textAllCaps="true"
-                        android:textColor="#38909d"
+                        android:textColor="#000000"
                         android:textSize="10sp" />
                 </LinearLayout>
 
@@ -119,48 +119,7 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:background="@drawable/head_top_news"
-                    android:gravity="right"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="7dp"
-                        android:gravity="right"
-                        android:text="Related News"
-                        android:textColor="@android:color/white"
-                        android:textSize="22sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical">
-
-                    <ListView
-                        android:id="@+id/relatedNewsListView"
-                        android:layout_width="match_parent"
-                        android:layout_height="255dp"/>
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
+            <include layout="@layout/related_layout"/>
         </LinearLayout>
 
     </ScrollView>
