--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -2,30 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_margin="10dp"
+        android:gravity="right"
         android:orientation="horizontal">
 
-        <ImageView
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
 
-        <TextView
+        <com.optimalbd.qualitynews.TextView.CustomTextView
+            app:customFont="LobsterTwo-BoldItalic.otf"
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="40dp"
             android:text="Menu 1"
-            android:textStyle="bold|italic"
             android:textColor="@android:color/black"
             android:textSize="22sp" />
+
+        <ImageView
+            android:visibility="visible"
+            android:layout_width="35dp"
+            android:layout_gravity="right"
+            android:layout_height="35dp"
+            android:src="@drawable/arrow"/>
+
     </LinearLayout>
 
 
