--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#ac0518</color>
+    <color name="colorPrimaryDark">#fc0026</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffff</color>
